tests/ui/uninhabited/uninhabited-unstable-field.stderr
error: unreachable pattern
  --> $DIR/uninhabited-unstable-field.rs:23:9
   |
LL |         Foo { .. } => {}
   |         ^^^^^^^^^^------
   |         |
   |         matches no values because `Foo<Void>` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types
note: the lint level is defined here
  --> $DIR/uninhabited-unstable-field.rs:8:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/uninhabited-unstable-field.rs:30:9
   |
LL |         _ => {}
   |         ^------
   |         |
   |         matches no values because `Foo<Void>` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/uninhabited-unstable-field.rs:40:9
   |
LL |         MyCoroutineState::Complete(_) => {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------
   |         |
   |         matches no values because `!` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: aborting due to 3 previous errors

